# stuff

./: README.md  snake.cpp
3d/javascript/: 3d-previous.js  3d.js  index.html  ship.js  teapot.js
api/c9/: README.md
devices/xport/: backup.cmd  checkout-bin.cmd  clean.cmd  formload.cpp  formload.h  main.cpp  main.dfm  main.h  xportgpio.cpp  xportgpio.h  xporttest.bpr  xporttest.ini
dos/dug-ide/: DUG_IDE.C
dos/ideinfo/: IDE.ASM  IDE.COM
languages/clojure/: diagonals.clj  recur.clj
languages/haskell/: rbs.hs
languages/racket/: board-test.rkt  board.rkt
languages/scheme/: call-cc.scm  fibers.scm
macosx/mefoditsa/: readme.txt
presentations/unittest_training/: Unittesting.pptx  clear.cmd
problems/birthday-paradox/: Birthday paradox.xlsx  birthday_paradox.cpp
problems/chess/: Trafigura Programming Problem - Chess Problem 2.doc
problems/erato-benchmark/: Makefile  erato-cxx.cpp  erato-go-bool.go  erato-go-int.go  erator-c-int.c
problems/monty-hall/: door.cpp
problems/ts-calculator/: FlexLexer.h  README  README.docx  backup-7z.cmd  build-main.cmd  build-tests.cmd  clean.cmd  executor.cpp  executor.h  executor_unittest.cpp  expression.cpp  expression.h  expression_unittest.cpp  function.cpp  function.h  function_unittest.cpp  generate-grammar.cmd  parser.cpp  parser.h  parser_grammar.c  parser_grammar.h  parser_grammar.y  parser_unittest.cpp  runtime.cpp  runtime.h  runtime_unittest.cpp  tick_stream.cpp  tick_stream.h  token.h  tokenizer.h  tokenizer.l  tokenizer.yy.cc  tokenizer_unittest.cpp  tscalc.cpp  tscalc.h  tscalc_main.cpp  (+4 more)
protocols/ssl/sshole/: ChangeLog  INSTALL  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.in  sshole.c  sshole.motor  sshole.spec
(+508 files in other folders)
